--- a/app/src/main/res/layout/activity_computer.xml
+++ b/app/src/main/res/layout/activity_computer.xml
@@ -32,7 +32,7 @@
                 android:text=""
                 android:paddingRight="5dp"
                 android:paddingLeft="5dp"
-                android:gravity="left"
+                android:gravity="center"
                 android:textSize="20sp"
                 android:layout_toRightOf="@id/coinImage"/>
 
