--- a/app/src/main/res/layout/activity_english.xml
+++ b/app/src/main/res/layout/activity_english.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="English Quiz"
+                android:text="@string/english_quiz"
                 android:textColor="@android:color/black"
                 android:textSize="25sp"
                 android:layout_toLeftOf="@+id/timeText"
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:gravity="center"
-            android:text="Đuổi Hình Bắt Chữ"
+            android:text="@string/u_i_h_nh_b_t_ch"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
