--- a/app/src/main/res/layout/activity_game_won.xml
+++ b/app/src/main/res/layout/activity_game_won.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tQ"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Chúc Mừng Bạn Đã Chiến Thắng"
+        android:text="@string/ch_c_m_ng_b_n_chi_n_th_ng"
         android:gravity="center"
         android:fontFamily="monospace"
         android:textSize="50sp"/>
@@ -21,7 +21,7 @@
         android:id="@+id/txtScore"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bạn Đã Đúng:"
+        android:text="@string/b_n_ng"
         android:gravity="center"
         android:fontFamily="monospace"
         android:textSize="50sp"/>
