--- a/app/src/main/res/layout/dialog_wrong_infinite.xml
+++ b/app/src/main/res/layout/dialog_wrong_infinite.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tQ"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Wrong"
+        android:text="@string/wrong"
         android:gravity="center"
         android:fontFamily="monospace"
         android:textSize="50sp"/>
@@ -27,7 +27,7 @@
         android:id="@+id/NextInf"
         android:background="@drawable/shape"
         android:layout_width="300dp"
-        android:text="NEXT"
+        android:text="Next"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:textSize="24dp"/>
